Update hardwareutils to use ProcessBuilder when reading file